Customized the images more

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h3>Project 2</h3>
             <a href="https://github.com/Waruggy/portfolio.git"><p>Portfolio</p></a>
             <p>Project from <strong><em>Assignment 02</em></strong></p>
-            <img src="./images/me.jpg" alt="Portfolio" height=200 width=150>
+            <img src="./images/me.jpg" alt="Myself" height=200 width=150>
         </article>
         <aside>
           <ul>
