--- a/about-me.html
+++ b/about-me.html
@@ -14,6 +14,7 @@
       </header>
       <article>
         <h2>Myself</h2>
+          <img src="./images/me.jpg" alt="Myself" height=200 width=150>
           <p>Hello! My name is Charles Wang.</p>
           <p>I have been working on University of Washington Front-End projects.</p>
       </article>
