Fixed my list links

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </article>
         <aside>
           <ul>
-            <a href="https://github.com/Waruggy/semantic-elements.git"><li>Project 1</li></a>
-            <a href="https://github.com/Waruggy/portfolio.git"><li>Project 2</li></a>
+            <li><a href="https://github.com/Waruggy/semantic-elements.git">Project 1</a></li>
+            <li><a href="https://github.com/Waruggy/portfolio.git">Project 2</a></li>
           </ul>
         </aside>
       </section>
