--- a/about-me.html
+++ b/about-me.html
@@ -20,9 +20,8 @@
       </article>
       <footer>
         <nav>
-          <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about-me.html">About Me</a></li>
+          <a href="index.html">Home</a> |
+          <a href="about-me.html">About Me</a>
           </ul>
         </nav>
       </footer>
