--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Front-End Projects</title>
+    <title>Home</title>
   </head>
   <body>
       <header>
