Added some styling

--- a/about-me.html
+++ b/about-me.html
@@ -15,8 +15,8 @@
       </header>
       <article>
         <h2>Myself</h2>
-          <img src="./images/me.jpg" alt="Myself" height=200 width=150>
-          <p>Hello! My name is Charles Wang.</p>
+          <img src="./images/me.jpg" alt="Myself">
+          <p id="me">Hello! My name is Charles Wang.</p>
           <p>I have been working on University of Washington Front-End projects.</p>
       </article>
       <footer>
