--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
         <header>
         <h2>Project Links</h2>
         </header>
-        <article>
+        <article class="project-one">
           <h3>Project 1</h3>
             <a href="https://github.com/Waruggy/semantic-elements.git"><p>Semantic-Elements</p></a>
             <p>Project from <strong><em>Assignment 01</em></strong></p>
-            <img src="./images/semantic.jpg" alt="Semantic Table" height=200 width=150>
+            <img src="./images/semantic.jpg" alt="Semantic Table">
         </article>
-        <article>
-          <h3>Project 2</h3>
+        <article class="project-two">
+          <h3>Project 2/3</h3>
             <a href="https://github.com/Waruggy/portfolio.git"><p>Portfolio</p></a>
-            <p>Project from <strong><em>Assignment 02</em></strong></p>
-            <img src="./images/me.jpg" alt="Myself" height=200 width=150>
+            <p>Project from <strong><em>Assignment 02/03</em></strong></p>
+            <img src="./images/me.jpg" alt="Myself">
         </article>
         <aside>
           <ul>
             <li><a href="https://github.com/Waruggy/semantic-elements.git">Project 1</a></li>
-            <li><a href="https://github.com/Waruggy/portfolio.git">Project 2</a></li>
+            <li><a href="https://github.com/Waruggy/portfolio.git">Project 2/3</a></li>
           </ul>
         </aside>
       </section>
