I add a lot of CSS styles

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </header>
         <article class="project-one">
           <h3>Project 1</h3>
-            <a href="https://github.com/Waruggy/semantic-elements.git"><p>Semantic-Elements</p></a>
+            <a class="link" href="https://github.com/Waruggy/semantic-elements.git"><p>Semantic-Elements</p></a>
             <p>Project from <strong><em>Assignment 01</em></strong></p>
             <img src="./images/semantic.jpg" alt="Semantic Table">
         </article>
         <article class="project-two">
           <h3>Project 2/3</h3>
-            <a href="https://github.com/Waruggy/portfolio.git"><p>Portfolio</p></a>
+            <a class="link" href="https://github.com/Waruggy/portfolio.git"><p>Portfolio</p></a>
             <p>Project from <strong><em>Assignment 02/03</em></strong></p>
             <img src="./images/me.jpg" alt="Myself">
         </article>
