--- a/about-me.html
+++ b/about-me.html
@@ -13,7 +13,7 @@
             <a href="about-me.html">About Me</a>
           </nav>
       </header>
-      <article>
+      <article id="myself">
         <h2>Myself</h2>
           <img src="./images/me.jpg" alt="Myself">
           <p id="me">Hello! My name is Charles Wang.</p>
