I have added google fonts, font awesome, and flex boxes

--- a/about-me.html
+++ b/about-me.html
@@ -4,6 +4,10 @@
       <meta charset="utf-8">
       <title>About Me</title>
       <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Stick&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+      <script src="https://kit.fontawesome.com/9b4cc31fab.js" crossorigin="anonymous"></script>
     </head>
     <body>
       <header>
@@ -15,6 +19,11 @@
       </header>
       <article id="myself">
         <h2>Myself</h2>
+        <div class="flex-container">
+          <i class="fab fa-acquisitions-incorporated"></i>
+          <i class="fab fa-d-and-d"></i>
+          <i class="fab fa-critical-role"></i>
+        </div>
           <img src="./images/me.jpg" alt="Myself">
           <p id="me">Hello! My name is Charles Wang.</p>
           <p>I have been working on University of Washington Front-End projects.</p>
