--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8">
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Stick&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/9b4cc31fab.js" crossorigin="anonymous"></script>
   </head>
-  <body>
       <header>
         <h1>My Projects</h1>
         <nav>
@@ -19,12 +22,17 @@
         </header>
         <article class="project-one">
           <h3>Project 1</h3>
+            <i class="fab fa-wolf-pack-battalion"></i>
             <a class="link" href="https://github.com/Waruggy/semantic-elements.git"><p>Semantic-Elements</p></a>
             <p>Project from <strong><em>Assignment 01</em></strong></p>
             <img src="./images/semantic.jpg" alt="Semantic Table">
         </article>
         <article class="project-two">
           <h3>Project 2/3</h3>
+          <div class="flex-container">
+            <div><i class="fas fa-cat"></i></div>
+            <div><i class="fas fa-dog"></i></div>
+          </div>
             <a class="link" href="https://github.com/Waruggy/portfolio.git"><p>Portfolio</p></a>
             <p>Project from <strong><em>Assignment 02/03</em></strong></p>
             <img src="./images/me.jpg" alt="Myself">
