Added a form page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <h1>My Projects</h1>
         <nav>
           <a href="index.html">Home</a> |
-          <a href="about-me.html">About Me</a>
+          <a href="about-me.html">About Me</a> |
+          <a href="web-form.html">Form</a>
         </nav>
       </header>
       <section>
@@ -47,7 +48,8 @@
       <footer>
         <nav>
           <a href="index.html">Home</a> |
-          <a href="about-me.html">About Me</a>
+          <a href="about-me.html">About Me</a> |
+          <a href="web-form.html">Form</a>
         </nav>
       </footer>
   </body>
