--- a/web-form.html
+++ b/web-form.html
@@ -2,34 +2,18 @@
   <html lang="en">
     <head>
       <meta charset="utf-8">
-      <title>About Me</title>
+      <title>Contact Form</title>
       <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-      <link href="https://fonts.googleapis.com/css2?family=Stick&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
-      <script src="https://kit.fontawesome.com/9b4cc31fab.js" crossorigin="anonymous"></script>
     </head>
     <body>
       <header>
-        <h1>About Me</h1>
-          <nav>
-            <a href="index.html">Home</a> |
-            <a href="about-me.html">About Me</a> |
-            <a href="web-form.html">Form</a>
-          </nav>
+      <h1>Contact Form</h1>
+      <nav>
+        <a href="index.html">Home</a> |
+        <a href="about-me.html">About Me</a> |
+        <a href="web-form.html">Form</a>
+      </nav>
       </header>
-      <article id="myself">
-        <h2>Myself</h2>
-        <div class="flex-container">
-          <i class="fab fa-acquisitions-incorporated"></i>
-          <i class="fab fa-d-and-d"></i>
-          <i class="fab fa-critical-role"></i>
-        </div>
-          <img src="./images/me.jpg" alt="Myself">
-          <p id="me">Hello! My name is Charles Wang.</p>
-          <p>I have been working on University of Washington Front-End projects.</p>
-      </article>
-      <h2>Friend Registration</h2>
       <form>
         <label for="firstname">First Name:</label><br>
         <input type="text" id="firstname" name="first-name" required><br>
